methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:3: error: not found: value forwward
for (stepper <- 1 to 14) { forwward()} 
                           ^MethodsDogHouse:9: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:15: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:25: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:35: error: not found: value dogHouse
		dogHouse();		
                ^